packages/proto-rpc/examples/errors/proto/ErrorRpc.server.ts
// @generated by protobuf-ts 2.8.0 with parameter server_generic,generate_dependencies
// @generated from protobuf file "ErrorRpc.proto" (syntax proto3)
// tslint:disable
import { HelloResponse } from './ErrorRpc'
import { HelloRequest } from './ErrorRpc'
import { ServerCallContext } from '@protobuf-ts/runtime-rpc'
/**
 * @generated from protobuf service ErrorRpcService
 */
export interface IErrorRpcService<T = ServerCallContext> {
    /**
     * @generated from protobuf rpc: timeout(HelloRequest) returns (HelloResponse);
     */
    timeout(request: HelloRequest, context: T): Promise<HelloResponse>
    /**
     * @generated from protobuf rpc: serverError(HelloRequest) returns (HelloResponse);
     */
    serverError(request: HelloRequest, context: T): Promise<HelloResponse>
    /**
     * @generated from protobuf rpc: unknownMethod(HelloRequest) returns (HelloResponse);
     */
    unknownMethod(request: HelloRequest, context: T): Promise<HelloResponse>
}
